@@ -16,6 +16,10 @@ Trunk (unreleased changes)
  4. HADOOP-526.  Fix a NullPointerException when attempting to start
     two datanodes in the same directory.  (Milind Bhandarkar via cutting)
 
+ 5. HADOOP-529.  Fix a NullPointerException when opening
+    value-compressed sequence files generated by pre-0.6.0 Hadoop.
+    (omalley via cutting)
+
 
 Release 0.6.0 - 2006-08-08
 
